# kaggle_tabular_playground_2022_04

./: README.md  kaggle_comp.ipynb  preprocessing.ipynb  pyproject.toml
