[tool.poetry]
name = "kaggle_tabular_playground_2022_04"
version = "0.1.0"
description = ""
authors = ["Anton <anton.goetzee-barral@airelogic.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
